On branch master Your branch is up to date with 'origin/master'.
Changes to be committed:
	modified:   src/app/models/transaction.model.ts
	modified:   src/app/pages/expense/expense.page.html
	modified:   src/app/pages/expense/expense.page.ts
	modified:   src/app/pages/income/income.page.html
	modified:   src/app/pages/income/income.page.ts
	modified:   src/app/pages/transactions/transactions.page.html
	modified:   src/app/pages/transactions/transactions.page.ts
	modified:   src/app/services/transaction.service.ts
	modified:   src/global.scss

--- a/src/app/pages/expense/expense.page.html
+++ b/src/app/pages/expense/expense.page.html
@@ -16,60 +16,124 @@
     </ion-button>
   </ion-item>
 
+ <!-- Conditional Rendering Based on Screen Size -->
+ <div *ngIf="isDesktop; else mobileView">
+  <!-- Desktop Specific Layout -->
+   <!-- Table for Submitted Transactions -->
+ <ion-grid *ngIf="submittedTransactions.length > 0; else noTransactionsTemplate">
+  <ion-row>
+    <ion-col colspan="6">
+      <h2>Submitted Transactions</h2>
+    </ion-col>
+  </ion-row>
+  <ion-row>
+    <ion-col>Date</ion-col>
+    <ion-col>Payee</ion-col>
+    <ion-col>Description</ion-col>
+    <ion-col>Category</ion-col>
+    <ion-col>Amount</ion-col>
+    <ion-col>Action</ion-col>
+  </ion-row>
+  <ion-row *ngFor="let transaction of submittedTransactions">
+    <ion-col>{{ transaction.date.toDate() | date:'mediumDate' }}</ion-col>
+    <ion-col>{{ transaction.payee }}</ion-col>
+    <ion-col>{{ transaction.description }}</ion-col>
+    <ion-col>{{ transaction.category }}</ion-col>
+    <ion-col>{{ transaction.amount | currency }}</ion-col>
+    <ion-col>
+      <ion-button (click)="editTransaction(transaction)" color="secondary">Edit</ion-button>
+      <ion-button (click)="deleteTransaction(transaction.id)" color="danger">Delete</ion-button>
+    </ion-col>
+  </ion-row>
+</ion-grid>
+
+<!-- Table for Upcoming Recurring Transactions -->
+<ion-grid *ngIf="upcomingRecurringTransactions.length > 0">
+  <ion-row>
+    <ion-col colspan="6">
+      <h2>Upcoming Recurring Transactions</h2>
+    </ion-col>
+  </ion-row>
+  <ion-row>
+    <ion-col>Next Due Date</ion-col>
+    <ion-col>Payee</ion-col>
+    <ion-col>Description</ion-col>
+    <ion-col>Category</ion-col>
+    <ion-col>Amount</ion-col>
+    <ion-col>Action</ion-col>
+  </ion-row>
+  <ion-row *ngFor="let transaction of upcomingRecurringTransactions">
+    <ion-col>{{ transaction.nextDueDate?.toDate() | date:'mediumDate' }}</ion-col>
+    <ion-col>{{ transaction.payee }}</ion-col>
+    <ion-col>{{ transaction.description }}</ion-col>
+    <ion-col>{{ transaction.category }}</ion-col>
+    <ion-col>{{ transaction.amount | currency }}</ion-col>
+    <ion-col>
+      <ion-button (click)="logTransactionIdAndResubmit(transaction.id)">Submit</ion-button>
+      <ion-button (click)="deleteTransaction(transaction.id)" color="danger">Delete</ion-button>
+    </ion-col>
+  </ion-row>
+</ion-grid>
+</div>
+
+<ng-template #mobileView>
+  <!-- Mobile Specific Layout -->
   <!-- Table for Submitted Transactions -->
-  <ion-grid *ngIf="submittedTransactions.length > 0; else noTransactionsTemplate">
+ <div *ngIf="submittedTransactions.length > 0; else noTransactionsTemplate">
+  <ion-grid>
     <ion-row>
-      <ion-col colspan="5">
-        <h2>Transactions</h2>
+      <ion-col size="12">
+        <h2>Submitted Transactions</h2>
       </ion-col>
-    </ion-row>
-    <ion-row>
-      <ion-col>Date</ion-col>
-      <ion-col>Payee</ion-col>
-      <ion-col>Description</ion-col>
-      <ion-col>Category</ion-col>
-      <ion-col>Amount</ion-col>
-      <ion-col>Action</ion-col>
     </ion-row>
     <ion-row *ngFor="let transaction of submittedTransactions">
-      <ion-col>{{ transaction.date.toDate() | date:'mediumDate' }}</ion-col>
-      <ion-col>{{ transaction.payee }}</ion-col>
-      <ion-col>{{ transaction.description }}</ion-col>
-      <ion-col>{{ transaction.category }}</ion-col>
-      <ion-col>{{ transaction.amount | currency }}</ion-col>
-      <ion-col>
-        <ion-button (click)="deleteTransaction(transaction.id)" color="danger">Delete</ion-button>
+      <ion-col size="12">
+        <ion-card>
+          <ion-card-header>
+            <ion-card-subtitle>{{ transaction.date.toDate() | date:'mediumDate' }} </ion-card-subtitle>
+            <ion-card-title>{{ transaction.category }}</ion-card-title>
+          </ion-card-header>
+          <ion-card-content>
+            Payee: {{ transaction.payee }}<br>
+            Description: {{ transaction.description }}<br>
+            Amount: {{ transaction.amount | currency }}<br>
+            <ion-button fill="outline" color="secondary" (click)="editTransaction(transaction)">Edit</ion-button>
+            <ion-button fill="outline" color="danger" (click)="deleteTransaction(transaction.id)">Delete</ion-button>
+          </ion-card-content>
+        </ion-card>
       </ion-col>
     </ion-row>
   </ion-grid>
+</div>
 
-  <!-- Table for Upcoming Recurring Transactions -->
-  <ion-grid *ngIf="upcomingRecurringTransactions.length > 0">
+<!-- Table for Upcoming Recurring Transactions -->
+<div *ngIf="upcomingRecurringTransactions.length > 0">
+  <ion-grid>
     <ion-row>
-      <ion-col colspan="5">
-        <h2>Reoccurring Transactions</h2>
+      <ion-col size="12">
+        <h2>Upcoming Recurring Transactions</h2>
       </ion-col>
-    </ion-row>
-    <ion-row>
-      <ion-col>Next Due Date</ion-col>
-      <ion-col>Payee</ion-col>
-      <ion-col>Description</ion-col>
-      <ion-col>Category</ion-col>
-      <ion-col>Amount</ion-col>
-      <ion-col>Action</ion-col>
     </ion-row>
     <ion-row *ngFor="let transaction of upcomingRecurringTransactions">
-      <ion-col>{{ transaction.nextDueDate?.toDate() | date:'mediumDate' }}</ion-col>
-      <ion-col>{{ transaction.payee }}</ion-col>
-      <ion-col>{{ transaction.description }}</ion-col>
-      <ion-col>{{ transaction.category }}</ion-col>
-      <ion-col>{{ transaction.amount | currency }}</ion-col>
-      <ion-col>
-        <ion-button (click)="logTransactionIdAndResubmit(transaction.id)">Submit</ion-button>
-        <ion-button (click)="deleteTransaction(transaction.id)" color="danger">Delete</ion-button>
+      <ion-col size="12">
+        <ion-card>
+          <ion-card-header>
+            <ion-card-subtitle>Due: {{ transaction.nextDueDate?.toDate() | date:'mediumDate' }}</ion-card-subtitle>
+            <ion-card-title>{{ transaction.category }}</ion-card-title>
+          </ion-card-header>
+          <ion-card-content>
+            Payee: {{ transaction.payee }}<br>
+            Description: {{ transaction.description }}<br>
+            Amount: {{ transaction.amount | currency }}<br>
+            <ion-button (click)="logTransactionIdAndResubmit(transaction.id)">Submit</ion-button>
+            <ion-button color="danger" (click)="deleteTransaction(transaction.id)">Delete</ion-button>
+          </ion-card-content>
+        </ion-card>
       </ion-col>
     </ion-row>
   </ion-grid>
+</div>
+</ng-template>
 
   <ng-template #noTransactionsTemplate>
     <ion-item>
@@ -85,22 +149,22 @@
     <form #incomeForm="ngForm" (ngSubmit)="addTransaction(incomeForm.value); showAddForm = false;">
       <ion-item>
         <ion-label position="floating">Amount</ion-label>
-        <ion-input type="number" name="amount" ngModel required></ion-input>
+        <ion-input type="number" name="amount" [(ngModel)]="formValues.amount" ></ion-input>
       </ion-item>
-      <ion-item>
-        <ion-label position="floating">Date</ion-label>
-        <ion-datetime 
-          presentation="date"
-          display-format="MMM DD, YYYY"
-          picker-format="MMM DD YYYY"
+      <div>
+        <ion-label position="stacked">Date</ion-label>
+        <ion-datetime
           name="date"
-          ngModel
+          presentation="date"
+          [(ngModel)]="formValues.date"
+          (ionChange)="updateNextDueDate()"
           required>
         </ion-datetime>
-      </ion-item>
+      </div>
+  
       <ion-item>
         <ion-label>Category</ion-label>
-        <ion-select name="category" ngModel placeholder="Select One">
+        <ion-select name="category" [(ngModel)]="formValues.category" ngModel placeholder="Select One">
           <ion-select-option *ngFor="let category of categories" [value]="category.name">
             {{ category.name }}
           </ion-select-option>
@@ -108,38 +172,61 @@
       </ion-item>
       <ion-item>
         <ion-label position="floating">Description</ion-label>
-        <ion-textarea name="description" ngModel></ion-textarea>
+        <ion-textarea name="description" [(ngModel)]="formValues.description"></ion-textarea>
       </ion-item>
       <ion-item>
         <ion-label position="floating">Payee</ion-label>
-        <ion-input type="text" name="payee" ngModel required></ion-input>
+        <ion-input type="text" name="payee" [(ngModel)]="formValues.payee" ></ion-input>
       </ion-item>
-      
-      <ion-item>
-        <ion-label>Recurrence</ion-label>
-        <ion-select placeholder="Select One" name="recurrence" ngModel>
-          <ion-select-option value="none">None</ion-select-option>
-          <ion-select-option value="weekly">Weekly</ion-select-option>
-          <ion-select-option value="biweekly">Bi-Weekly</ion-select-option>
-          <ion-select-option value="monthly">Monthly</ion-select-option>
-        </ion-select>
-      </ion-item>
+      <!-- Recurrence Selection -->
+    <ion-item>
+      <ion-label>Recurrence</ion-label>
+      <ion-select placeholder="Select One" name="recurrence" [(ngModel)]="formValues.recurrence" (ionChange)="updateNextDueDate()">
+        <ion-select-option value="none">None</ion-select-option>
+        <ion-select-option value="weekly">Weekly</ion-select-option>
+        <ion-select-option value="biweekly">Bi-Weekly</ion-select-option>
+        <ion-select-option value="monthly">Monthly</ion-select-option>
+      </ion-select>
+    </ion-item>
+
       
       <!-- Next Due Date Selection -->
-      <ion-item>
-        <ion-label>Next Due Date</ion-label>
-        <ion-datetime display-format="MMM DD, YYYY" picker-format="MMM DD YYYY" name="nextDueDate" ngModel></ion-datetime>
-      </ion-item>      
-      <ion-button type="submit" expand="block">Submit</ion-button>
+<ion-item>
+  <ion-label>Next Due Date: <br><strong>{{ formValues.nextDueDate | date: 'mediumDate' }}</strong></ion-label>
+</ion-item>
+<ion-item>
+  
+    <ion-button expand="block" id="open-date-btn">Select Next Due Date</ion-button>
+  
+</ion-item>
+
+<ion-popover trigger="open-date-btn" [keepContentsMounted]="true" alignment="center" mode="ios" animated="false">
+  <ng-template>
+    <ion-datetime
+      name = "dueDate"
+      presentation="date"
+      id="nextDueDateBtn"
+      [(ngModel)]="formValues.nextDueDate"
+      (ionChange)="updateDueDateFromPicker($event)"
+      preferWheel="false"
+      showDefaultButtons="true"
+      doneText="Set Date"
+      cancelText="Cancel">
+    </ion-datetime>
+  </ng-template>
+</ion-popover>
+
+
+<ion-button type="submit" expand="block">{{ editMode ? 'Update' : 'Submit' }}</ion-button>
+<ion-button expand="block" (click)="resetForm()">Cancel</ion-button>
     </form>
-    <!-- Optionally add a cancel button to hide form -->
-    <ion-button expand="block" (click)="showAddForm = false">Cancel</ion-button>
   </div>
 </ion-content>
 
 <ion-modal [keepContentsMounted]="true" [isOpen]="showCalendar" (didDismiss)="cancelCalendar()">
   <ng-template>
     <ion-datetime
+      name = "selectedDate"
       presentation="month-year"
       [showDefaultButtons]="true"
       doneText="Confirm"
