--- a/src/app/auth/login/login.page.html
+++ b/src/app/auth/login/login.page.html
@@ -7,15 +7,16 @@
 <ion-content>
   <ion-item>
     <ion-label position="floating">Email</ion-label>
-    <ion-input [(ngModel)]="email" type="email"></ion-input>
+    <ion-input [(ngModel)]="email" type="email" required></ion-input>
   </ion-item>
   <ion-item>
     <ion-label position="floating">Password</ion-label>
-    <ion-input [(ngModel)]="password" type="password"></ion-input>
+    <ion-input [(ngModel)]="password" type="password" required></ion-input>
   </ion-item>
   <ion-button expand="block" (click)="login()">Login</ion-button>
   <ion-text color="danger" *ngIf="errorMessage">
     <p>{{ errorMessage }}</p>
   </ion-text>
-  <ion-button fill="clear" routerLink="/register">Don't have an account? Register</ion-button>
+  <ion-button fill="clear" routerLink="/register">Don't have an account? Register</ion-button> <br>
+  <ion-button fill="clear" (click)="forgotPassword()">Forgot Password?</ion-button>
 </ion-content>
