--- a/src/app/pages/expense/expense.page.html
+++ b/src/app/pages/expense/expense.page.html
@@ -26,7 +26,7 @@
       <h2>Submitted Transactions</h2>
     </ion-col>
   </ion-row>
-  <ion-row>
+  <ion-row class="header-row">
     <ion-col>Date</ion-col>
     <ion-col>Payee</ion-col>
     <ion-col>Description</ion-col>
@@ -54,7 +54,7 @@
       <h2>Upcoming Recurring Transactions</h2>
     </ion-col>
   </ion-row>
-  <ion-row>
+  <ion-row class="header-row">
     <ion-col>Next Due Date</ion-col>
     <ion-col>Payee</ion-col>
     <ion-col>Description</ion-col>
@@ -70,7 +70,7 @@
     <ion-col>{{ transaction.amount | currency }}</ion-col>
     <ion-col>
       <ion-button (click)="logTransactionIdAndResubmit(transaction.id)">Submit</ion-button>
-      <ion-button (click)="deleteTransaction(transaction.id)" color="danger">Delete</ion-button>
+      <ion-button (click)="endTransactionRecurrence(transaction.id)" color="danger">End Recurrence</ion-button>
     </ion-col>
   </ion-row>
 </ion-grid>
@@ -126,7 +126,7 @@
             Description: {{ transaction.description }}<br>
             Amount: {{ transaction.amount | currency }}<br>
             <ion-button (click)="logTransactionIdAndResubmit(transaction.id)">Submit</ion-button>
-            <ion-button color="danger" (click)="deleteTransaction(transaction.id)">Delete</ion-button>
+            <ion-button (click)="endTransactionRecurrence(transaction.id)" color="danger">End Recurrence</ion-button>
           </ion-card-content>
         </ion-card>
       </ion-col>
