On branch master Your branch is up to date with 'origin/master'.
Changes to be committed:
	modified:   src/app/auth/register/register.page.html
	modified:   src/app/auth/register/register.page.ts
	modified:   src/app/models/transaction.model.ts
	modified:   src/app/pages/expense/expense.page.html
	modified:   src/app/pages/income/income.page.html
	modified:   src/app/pages/income/income.page.ts
	modified:   src/app/pages/settings/settings.page.html
	modified:   src/app/pages/settings/settings.page.ts
	modified:   src/app/pages/transactions/transactions.page.html
	modified:   src/app/services/auth.service.ts
	modified:   src/app/services/transaction.service.ts

--- a/src/app/auth/register/register.page.html
+++ b/src/app/auth/register/register.page.html
@@ -7,11 +7,17 @@
 <ion-content>
   <ion-item>
     <ion-label position="floating">Email</ion-label>
-    <ion-input [(ngModel)]="email" type="email"></ion-input>
+    <ion-input [(ngModel)]="email" type="email" required></ion-input>
   </ion-item>
   <ion-item>
     <ion-label position="floating">Password</ion-label>
-    <ion-input [(ngModel)]="password" type="password"></ion-input>
+    <ion-input [(ngModel)]="password" type="password" required></ion-input>
   </ion-item>
+  <ion-text color="medium">
+    <p>Password must be at least 8 characters and include a number, an uppercase letter, and a special character.</p>
+  </ion-text>
   <ion-button expand="block" (click)="register()">Register</ion-button>
+  <ion-text color="danger" *ngIf="passwordError">
+    <p>{{ passwordError }}</p>
+  </ion-text>
 </ion-content>
