--- a/src/app/pages/settings/settings.page.html
+++ b/src/app/pages/settings/settings.page.html
@@ -17,6 +17,10 @@
       <ion-label>Toggle Cumulative View</ion-label>
       <ion-toggle checked="{{cumulativeViewEnabled}}" (ionChange)="toggleCumulativeView($event)"></ion-toggle>
     </ion-item>
+    <ion-item>
+      <ion-label color="danger">Delete Account</ion-label>
+      <ion-button slot="end" color="danger" (click)="deleteAccount()">Delete</ion-button>
+    </ion-item>
   </ion-list>
 </ion-content>
 
