--- a/src/app/pages/expense/expense.page.html
+++ b/src/app/pages/expense/expense.page.html
@@ -97,8 +97,8 @@
             Payee: {{ transaction.payee }}<br>
             Description: {{ transaction.description }}<br>
             Amount: {{ transaction.amount | currency }}<br>
-            <ion-button fill="outline" color="secondary" (click)="editTransaction(transaction)">Edit</ion-button>
-            <ion-button fill="outline" color="danger" (click)="deleteTransaction(transaction.id)">Delete</ion-button>
+            <ion-button  color="secondary" (click)="editTransaction(transaction)">Edit</ion-button>
+            <ion-button  color="danger" (click)="deleteTransaction(transaction.id)">Delete</ion-button>
           </ion-card-content>
         </ion-card>
       </ion-col>
