--- a/src/global.scss
+++ b/src/global.scss
@@ -171,6 +171,7 @@ ion-content {
 :root {
   @include apply-palette($colors);
 
+
 }
 
 /* Global styles for ion-grid to show grid lines */
@@ -202,13 +203,14 @@ ion-col:last-child {
 //   --padding-top: var(--ion-safe-area-top);
 // }
 
-md ion-header {
-  padding-top: 40px; /* Adjust this value as needed */
+ion-header {
+  padding-top: 0px; 
 }
 
-// ion-header {
-//   padding-top: 20px;
-// }
+// Android specific adjustments
+body.platform-md ion-header {
+  padding-top: 20px !important; 
+}
 
 .ios ion-header {
   padding-top: 0px; /* No additional padding for iOS */
